fix image message overflow

--- a/src/assets/css/wechat-chat-message.module.css
+++ b/src/assets/css/wechat-chat-message.module.css
@@ -148,15 +148,15 @@
 }
 
 .message .image {
-    max-height: 200px;
-    overflow: hidden;
+    max-height: 120px;
 }
 
 .message .image > img {
-    width: 100px;
+    width: 70px;
     height: auto;
-    min-height: 100px;
+    min-height: 50px;
     border-radius: 10px;
+    max-height: 120px;
 }
 
 .message .datetime {
